seach bar and Login and Sign up button added

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body{
-  font-family: 'Baloo Bhaijaan 2', cursive;
+  font-family: 'Baloo Bhaijaan 2', cursive !important;
 }
 .App {
   text-align: center;
